# AEONS

./: Cargo.toml  README.md  cell.rs  colony.rs  main.rs  movement.rs  reproduction.rs  tree.rs
assets/: LARGE_TEST.colony  TEST.colony  training_arena.glb  world1.blend  world3.blend
assets/shaders/: terrain.wgsl
colonies/: Starter.colony
data-analysis/: brain_weights.R  correlations.R  general.R  limb_brains.R  results_brain_weights.txt  results_correlations.txt  results_general.txt  results_limb_brains.txt  results_time_series.txt  results_training_curves.txt  run_all.sh  time_series.R  training_curves.R
datasets/: dopamine_analysis.R  simulation_dataset_19-05-2026-01-55-10.csv
docs/: herbivore_intelligence.md
species/: GrowingPlant1.species  MiniTree.species  MovingPlant.species  carnivore1.species  herbivore1.species  test.species
src/: behaviour.rs  behaviour_gpu.rs  bevy_flycam.rs  cell.rs  colony.rs  dynamic_topology_growth.rs  energy.rs  environment.rs  frame_profiler.rs  growth.rs  intelligence_level_1.rs  intelligence_level_3.rs  main.rs  movement.rs  movement_old.rs  movement_random.rs  mutation.rs  organism_collision.rs  photosynthesis.rs  player_plugin.rs  predation.rs  reproduction.rs  reproduction_old.rs  simulation_settings.rs  terrain_collision.rs  test.colony  tree.rs  viewport_settings.rs  volumetric_growth.rs  water.rs  world_geometry.rs
src/behaviour/: behaviour.rs  intelligence_level_0.rs  intelligence_level_1_hetero.rs  intelligence_level_1_hetero_old.rs  intelligence_level_1_photo.rs  intelligence_level_2.rs  intelligence_level_3.rs  intelligence_level_herbivore_1.rs  new_intelligence_L1.pseudocode  new_intelligence_L1.rs  photosynthesis.rs  predation.rs  rl_helpers.rs  sensory.rs  world_model.rs
src/behaviour/basic_3d_movement/: intelligence_level_simple_aquatic.rs
src/behaviour/limb_based_movement/: intelligence_level_2_limb.rs  intelligence_level_3_limb.rs  intelligence_level_herbivore_1_limb.rs  limb_ppo.rs
src/behaviour/sliding_movement/: intelligence_level_2_sliding.rs  intelligence_level_3_sliding.rs  intelligence_level_herbivore_1_sliding.rs  (+1 more)
src/colony/: body_part.rs  cell.rs  colony.rs  colony_save_load.rs  dataset_export.rs  energy.rs  krishi.rs  limb_force_probe.rs  limb_time_series_log.rs  organism.rs  reproduction.rs  time_series_log.rs
src/colony_editor/: camera.rs  creation_panel.rs  inventory_panel.rs  layout.rs  mod.rs  placement.rs  save.rs  session.rs  template.rs  tool_panel.rs  undo.rs
src/dynamic_topology_growth/: glb_import.rs  grow_to_sky.rs  growth.rs  rebuild_bpa.rs  rebuild_starshaped.rs
src/environment/: terrain_properties.rs
src/frontend/: frontend.rs  individuum_navigator.rs  launcher.rs  setup_dialogue.rs  simulation_settings.rs  species_navigator.rs  statistics_panel.rs  tree_view.rs  ui_modal.rs
src/growth/: continuous_growth.rs  mutation.rs
src/lineages/: dna.rs  mod.rs  speciation.rs  species.rs
src/movement_physics/: avian_setup.rs  movement.rs  organism_collision.rs  rapier_setup.rs
src/physiology/: physiology.rs
src/volumetric_growth/: dodecahedron.rs  growth_controls.rs  smooth_vertices.rs
src/world/: aeonsw_format.rs  environment.rs  terrain_properties.rs  water.rs  world_format.rs  world_geometry.rs
website/: HOW_TO_USE.txt  README.md  package.json  server.js  summary.txt
website/public/: index.html  main.js  styles.css
(+51 files in other folders)
