[package]
name = "AEONS"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking", "default", "bevy_winit", "bevy_render", "bevy_pbr", "bevy_gizmos", "bevy_gizmos_render", "bevy_dev_tools"] }
burn = { version = "0.20.1", features = ["autodiff"] }
burn-cuda = "0.20"
bevy-inspector-egui = "0.36.0"
rand = "0.10.0"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Avian3d — pure-Rust, Bevy-native physics engine (XPBD over parry3d).
# Used by limb-based organisms (Organism::sliding_movement = false) for
# rigid-body chains driven by PD target-angle joints. Sliding organisms
# get kinematic colliders so the two populations interact.
avian3d = "0.6"


